Remove version override

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,9 +12,9 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <VeldridSpirvVersion Condition="'$(VeldridSpirvVersion)' == ''">1.0.15</VeldridSpirvVersion>
-    <NativeLibraryLoaderVersion Condition="'$(NativeLibraryLoaderVersion)' == ''">1.0.13</NativeLibraryLoaderVersion>
-    <VorticeWindowsVersion Condition="'$(VorticeWindowsVersion)' == ''">2.4.2</VorticeWindowsVersion>
+    <VeldridSpirvVersion>1.0.15</VeldridSpirvVersion>
+    <NativeLibraryLoaderVersion>1.0.13</NativeLibraryLoaderVersion>
+    <VorticeWindowsVersion>2.4.2</VorticeWindowsVersion>
   </PropertyGroup>
 
   <PropertyGroup>
