GHA: Build only Veldrid project

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore src
     - name: Build
-      run: dotnet build --no-restore src
+      run: dotnet build src/Veldrid --no-restore
     #- name: Test
     #  run: dotnet test --no-build --verbosity normal src --filter "Backend=D3D11"
     - name: Build Packages
